@@ -159,8 +159,8 @@ dnl gettext
 
 dnl Languages which your application supports
 ALL_LINGUAS="he es_MX ru fr sv"
-AM_GNU_GETTEXT
-AM_GNU_GETTEXT_VERSION(0.10.40)
+AM_GNU_GETTEXT([external])
+AM_GNU_GETTEXT_VERSION([0.17])
 
 if test "${prefix}" = "NONE"; then
   AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
@@ -189,7 +189,6 @@ dnl ============================================================================
 AC_OUTPUT([
 Makefile
 libhdate.pc
-intl/Makefile
 po/Makefile.in
 src/Makefile
 examples/Makefile
