@@ -3,7 +3,8 @@ libhdate (1.4.10)
   * Add Amos Shapir to the Authors file and updating Amos's email
   * Fix Kislev Hebrew translation (thanks: Ariel Galola)
   * Python, Perl, Pascal bindings are building by default
-  *
+  * configure.in (AM_GNU_GETTEXT_VERSION): Bump to 0.17.
+  * 
 	
   -- Yaacov Zamir <kzamir@wall.co.il>  Thusday, 3 January 2008 22:00
 
